@@ -1,0 +1,55 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<jsp:root xmlns:jsp="http://java.sun.com/JSP/Page" version="2.0"
+	xmlns:s="/struts-tags" xmlns:sj="/struts-jquery-tags">
+	<jsp:directive.page language="java"
+		contentType="text/html; charset=UTF-8" pageEncoding="UTF-8" />
+	<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<title>Changelog</title>
+<jsp:text>
+
+</jsp:text>
+</head>
+<body>
+	<center>
+		<form style="width: 90%; border: 0px">
+
+			<table>
+				<tr>
+					<td>v1.0</td>
+					<td><ul>
+							<li>-Myl</li>
+						</ul></td>
+				</tr>
+				<tr>
+					<td>v1.1</td>
+					<td><ul>
+							<li>-Agregada la opción para enviar comentarios</li>
+						</ul></td>
+				</tr>
+				<tr>
+					<td>v1.2</td>
+					<td><ul>
+							<li>-Se corrige el armado de los mazos, manteniendo el
+								estado actual cuando se presenta un error al guardar.</li>
+							<li>-Se agrega la restricción para los formatos de mazo. -Se
+								agrega la etiqueta de formato de mazo en el chat.</li>
+							<li>-BugFix: Se corrige el error al intentar eliminar un
+								mazo.</li>
+						</ul></td>
+				</tr>
+				<tr>
+					<td>v1.3</td>
+					<td><ul>
+							<li>-Se agrega Furia</li>
+							<li>-BugFix: Se corrige el error al intentar colocar un mazo
+								como predeterminado.</li>
+							<li>-La arena de duelo se abre en una nueva ventana</li>
+						</ul></td>
+				</tr>
+			</table>
+		</form>
+	</center>
+</body>
+	</html>
+</jsp:root>
